--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
   <div class="container">
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
-      <li class="header-column pull-left"> <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="index.htm"></a></li>
+      <li class="header-column pull-left"> <a id="pathway-logo" title="pathway logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a> <a id="pathway-mobile-logo" title="pathway mobile logo" class="center-block navbar-brand visible-xs" href="index.htm"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a></li>
       <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/advising-and-support.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
        <form class="navbar-right pull-right ng-pristine ng-valid">
         <!-- Sign-in / User button -->
         <div class="btn-group">
-          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/working-build/"><span class="hidden-xs">Patty Pathway</span><img class="visible-xs" src="/working-build/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
+          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/working-build/"><span class="hidden-xs">Patty</span><img class="visible-xs" alt="user icon" src="/working-build/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
           <button type="button" class="btn signin-btn dropdown-toggle" data-toggle="dropdown">
             <span class="caret"></span>
             <span class="sr-only">Dropdown</span>
@@ -99,7 +99,7 @@
       <li data-target="#myCarousel" data-slide-to="5"> </li>
     </ol>
     <div class="carousel-inner">
-     <div class="item active">  <a href="/working-build/pages/what_is_pathway/what_is_pathway.html"><img src="/working-build/img/homepage/whatispathway.jpg" alt="What is Pathway"></a>
+     <div class="item active">  <a href="/working-build/pages/what_is_pathway/what_is_pathway.html"><img src="/working-build/img/homepage/whatispathway.jpg" alt="What is Pathway Slide"></a>
       <div class="container">
         <div class="carousel-caption red">
           <h1><a href="/working-build/pages/what_is_pathway/what_is_pathway.html">What is Pathway?</a></h1>
@@ -107,7 +107,7 @@
         </div>
       </div>
     </div>
-    <div class="item"> <a href="/working-build/pages/what_is_pathway/what_is_pathway.html"><img src="/working-build/img/homepage/opportunity_postits.png" alt="Opportunity"></a>
+    <div class="item"> <a href="/working-build/pages/what_is_pathway/what_is_pathway.html"><img src="/working-build/img/homepage/opportunity_postits.png" alt="Open the Door to Opportunity Slide"></a>
       <div class="container">
         <div class="carousel-caption orange">
           <h1><a href="/working-build/pages/what_is_pathway/what_is_pathway.html">Open the Door to Opportunity</a></h1>
@@ -121,7 +121,7 @@
          <img class="visible-sm visible-xs" src="/working-build/img/homepage/ACTFL_orange_mobile.png" alt="Test your english skills">
        </a>
     </div>
-    <div class="item"><a href="/working-build/pages/what_is_pathway/l_version/HPW.html"><img src="/working-build/img/homepage/meet-a-student.jpg" alt="English Language Learners"></a>
+    <div class="item"><a href="/working-build/pages/what_is_pathway/l_version/HPW.html"><img src="/working-build/img/homepage/meet-a-student.jpg" alt="Meet Pathway Students Slide"></a>
       <div class="container">
         <div class="carousel-caption turquoise">
           <h1><a href="/working-build/pages/testimonials/testimonials.html">Meet a Pathway Student</a></h1>
@@ -129,7 +129,7 @@
         </div>
       </div>
     </div>
-    <div class="item"><a href="/working-build/pages/testimonials/testimonials.html"><img src="/working-build/img/homepage/speaking_partners.jpg" alt="Speaking Partners"></a>
+    <div class="item"><a href="/working-build/pages/testimonials/testimonials.html"><img src="/working-build/img/homepage/speaking_partners.jpg" alt="Speaking Partners Slide"></a>
       <div class="container">
         <div class="carousel-caption teal">
           <h1><a href="/working-build/pages/what_is_pathway/l_version/HPW.html">English Language Learners</a></h1>
@@ -137,7 +137,7 @@
         </div>
       </div>
     </div>
-    <div class="item"><a href="/working-build/pages/advising-and-support.html"><img src="/working-build/img/homepage/need_help.png" alt="Help"></a>
+    <div class="item"><a href="/working-build/pages/advising-and-support.html"><img src="/working-build/img/homepage/need_help.png" alt="Need Help? - Pathway Support Slide"></a>
       <div class="container">
         <div class="carousel-caption green">
           <h1><a href="/working-build/pages/advising-and-support.html">Need Help?</a></h1>
@@ -146,22 +146,22 @@
       </div>
     </div>
   </div>
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left"></span> </a> <a class="right carousel-control" href="#myCarousel" data-slide="next"> <span class="glyphicon glyphicon-chevron-right"></span> </a> </div>
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev"> <span class="sr-only">Previous Slide</span><span class="glyphicon glyphicon-chevron-left"></span> </a> <a class="right carousel-control" href="#myCarousel" data-slide="next"> <span class="sr-only">Next Slide</span><span class="glyphicon glyphicon-chevron-right"></span> </a> </div>
 </div>
 <!-- Hero Carousel End -->
 
 <div class="container"> 
   <div class="row">
     <div class="feature col-sm-4 col-xs-6"> 
-      <a href="/working-build/pages/what_is_pathway/what_is_pathway.html"><img src="/working-build/img/homepage/localgatherings.png" class="img-responsive"></a>
+      <a alt="Click here to learn more about Pathway" href="/working-build/pages/what_is_pathway/what_is_pathway.html"><img alt="Pathway Gathering Poster" src="/working-build/img/homepage/localgatherings.png" class="img-responsive"></a>
       <div class="featureMaster feature1 first-columns"><a href="/working-build/pages/what_is_pathway/what_is_pathway.html">Online Courses with local gatherings</a></div>
     </div>
     <div class="feature col-sm-4 col-xs-6"> 
-      <a href="#apply"><img src="/working-build/img/homepage/applyhere.png" class="img-responsive"></a>
+      <a alt="Click here to apply" href="#apply"><img alt="Pathway student" src="/working-build/img/homepage/applyhere.png" class="img-responsive"></a>
       <div class="featureMaster feature2 second-columns"><a href="#apply">Find a Location and&nbsp;Apply</a></div>
     </div>
     <div class="feature col-sm-4 col-xs-6"> 
-      <a href="/working-build/pages/advising-and-support.html"><img src="/working-build/img/homepage/pathwayadvising.png" class="img-responsive"></a>
+      <a alt="Click here to visit advising and support" href="/working-build/pages/advising-and-support.html"><img alt="advising and support image" src="/working-build/img/homepage/pathwayadvising.png" class="img-responsive"></a>
       <div class="featureMaster feature3 third-columns"><a href="/working-build/pages/advising-and-support.html">friendly support team</a></div>
     </div>
     <div class="feature visible-xs col-xs-6">
@@ -182,16 +182,16 @@
     <div class="footer-links navbar">
       <ul class="nav navbar-nav">
         <li class="social-container"> 
-          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/facebook.png" width="27" height="27"></a><a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="/working-build/img/social-icons/pinterest.png" width="27" height="27"></a><br class="hidden-xs"> <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/twitter.png" width="27" height="27"></a> <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="/working-build/img/social-icons/instagram.png" width="27" height="27"></a>
+          <a class="social-icon" alt="Pathway on Facebook" href="https://www.facebook.com/BYUIdahoPathway"><img alt="facebook icon" src="/working-build/img/social-icons/facebook.png" width="27" height="27"></a><a class="social-icon" alt="Pathway on Pinterest" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img alt="pinterest icon" src="/working-build/img/social-icons/pinterest.png" width="27" height="27"></a><br class="hidden-xs"><a class="social-icon" alt="Pathway on Twitter" href="https://twitter.com/BYUIdahoPathway"><img alt="Twitter icon" src="/working-build/img/social-icons/twitter.png" width="27" height="27"></a><a class="social-icon" alt="Pathway on Instagram" href="http://instagram.com/Pathway_BYUIdaho"><img alt="Instagram icon" src="/working-build/img/social-icons/instagram.png" width="27" height="27"></a>
         </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
         <li class="footer-link hidden-xs"> <a href="/working-build/pages/about-us.html">About Us</a> </li>
-        <li class="footer-link hidden-xs"> <a href="/working-build/pages/pathway-faq.html"><img class="faq-bubble" src="/working-build/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li class="footer-link hidden-xs"> <a href="/working-build/pages/pathway-faq.html"><img class="faq-bubble" alt="question-bubble" src="/working-build/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/videos">Media</a>  </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="http://www.ldsphilanthropies.org/byu-idaho/funds/byuidaho-pathway.html">Donate</a> </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_3mwtzS9u0NgVnQV">Visit a Location</a> </li>
       </ul>
-      <a href="http://www.byui.edu" class="byui-logo hidden-xs"></a> </div>
+      <a href="http://www.byui.edu" class="byui-logo hidden-xs"><span class="sr-only">Go to byui.edu</span></a> </div>
   </div>
 </footer>
 <!-- jQuery, Bootstrap, and Misc Scripts -->
