--- a/pages/local_leaders/getting-started.html
+++ b/pages/local_leaders/getting-started.html
@@ -37,12 +37,12 @@
   <div class="container">
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
-      <li class="header-column pull-left"> <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="index.htm"></a></li>
+      <li class="header-column pull-left"> <a id="pathway-logo" title="pathway logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a> <a id="pathway-mobile-logo" title="pathway mobile logo" class="center-block navbar-brand visible-xs" href="index.htm"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a></li>
       <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/advising-and-support.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
        <form class="navbar-right pull-right ng-pristine ng-valid">
         <!-- Sign-in / User button -->
         <div class="btn-group">
-          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/working-build/"><span class="hidden-xs">Patty Pathway</span><img class="visible-xs" src="/working-build/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
+          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/working-build/"><span class="hidden-xs">Patty</span><img class="visible-xs" alt="user icon" src="/working-build/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
           <button type="button" class="btn signin-btn dropdown-toggle" data-toggle="dropdown">
             <span class="caret"></span>
             <span class="sr-only">Dropdown</span>
@@ -117,11 +117,11 @@
     </div>
     <div class="pf-section no-icon">
       <div class="">
-       <img class="img-space" style="width:30%; float:left;" src="/working-build/img/local-leaders/leadership_guide.png" />
+       <img alt="leadership guide thumb" class="img-space" style="width:30%; float:left;" src="/working-build/img/local-leaders/leadership_guide.png" />
      </div>
      <div style="width:65%; float:left; margin:203px 0 60px 15px;">
        <p class="click-here blue">
-        <img  style="float:left; margin-right:20px;" src="/working-build/img/local-leaders/download_blue.png"/>
+        <img alt="download icon" style="float:left; margin-right:20px;" src="/working-build/img/local-leaders/download_blue.png"/>
         <a href="/working-build/pdfs/local_leaders/Pathway_Handbook_for_Church_Leaders.pdf" target="_blank">Click here to download the Pathway <br />Priesthood Leadership Guide.</a></p>
       </div>
     </div> 
@@ -182,7 +182,7 @@
    <div id="footnote">1 BYU-Idaho must seek and receive approval for each new Pathway site. While general communication  regarding the program is acceptable prior to that approval, formal efforts to implement Pathway may not occur until after BYU-Idaho provides notification that a site has been approved.</p>
    </div>
 
-   <img style="float:left; width:205" id="location-icon" class="img-responsive img-space"src="/working-build/img/local-leaders/pathway_red.png" width="55" height="55" />
+   <img alt="pathway-logo" style="float:left; width:205" id="location-icon" class="img-responsive img-space"src="/working-build/img/local-leaders/pathway_red.png" width="55" height="55" />
    <p class="red note" style="float:left; width:85%; margin:20px 0 0 10px;">If you are ready to request Pathway in your area, <a href="/working-build/pages/local_leaders/request-a-site.html">click here</a> to access the Pathway application.</p>
  </div>
 </div>
@@ -207,16 +207,16 @@
     <div class="footer-links navbar">
       <ul class="nav navbar-nav">
         <li class="social-container"> 
-          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/facebook.png" width="27" height="27"></a><a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="/working-build/img/social-icons/pinterest.png" width="27" height="27"></a><br class="hidden-xs"> <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/twitter.png" width="27" height="27"></a> <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="/working-build/img/social-icons/instagram.png" width="27" height="27"></a>
+          <a class="social-icon" alt="Pathway on Facebook" href="https://www.facebook.com/BYUIdahoPathway"><img alt="facebook icon" src="/working-build/img/social-icons/facebook.png" width="27" height="27"></a><a class="social-icon" alt="Pathway on Pinterest" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img alt="pinterest icon" src="/working-build/img/social-icons/pinterest.png" width="27" height="27"></a><br class="hidden-xs"><a class="social-icon" alt="Pathway on Twitter" href="https://twitter.com/BYUIdahoPathway"><img alt="Twitter icon" src="/working-build/img/social-icons/twitter.png" width="27" height="27"></a><a class="social-icon" alt="Pathway on Instagram" href="http://instagram.com/Pathway_BYUIdaho"><img alt="Instagram icon" src="/working-build/img/social-icons/instagram.png" width="27" height="27"></a>
         </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
         <li class="footer-link hidden-xs"> <a href="/working-build/pages/about-us.html">About Us</a> </li>
-        <li class="footer-link hidden-xs"> <a href="/working-build/pages/pathway-faq.html"><img class="faq-bubble" src="/working-build/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li class="footer-link hidden-xs"> <a href="/working-build/pages/pathway-faq.html"><img class="faq-bubble" alt="question-bubble" src="/working-build/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/videos">Media</a>  </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="http://www.ldsphilanthropies.org/byu-idaho/funds/byuidaho-pathway.html">Donate</a> </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_3mwtzS9u0NgVnQV">Visit a Location</a> </li>
       </ul>
-      <a href="http://www.byui.edu" class="byui-logo hidden-xs"></a> </div>
+      <a href="http://www.byui.edu" class="byui-logo hidden-xs"><span class="sr-only">Go to byui.edu</span></a> </div>
   </div>
 </footer>
 <!-- jQuery, Bootstrap, and Misc Scripts -->
