--- a/pages/speaking_partners/guidelines.html
+++ b/pages/speaking_partners/guidelines.html
@@ -37,12 +37,12 @@
   <div class="container">
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
-      <li class="header-column pull-left"> <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="index.htm"></a></li>
+      <li class="header-column pull-left"> <a id="pathway-logo" title="pathway logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a> <a id="pathway-mobile-logo" title="pathway mobile logo" class="center-block navbar-brand visible-xs" href="index.htm"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a></li>
       <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/advising-and-support.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
        <form class="navbar-right pull-right ng-pristine ng-valid">
         <!-- Sign-in / User button -->
         <div class="btn-group">
-          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/working-build/"><span class="hidden-xs">Patty Pathway</span><img class="visible-xs" src="/working-build/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
+          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/working-build/"><span class="hidden-xs">Patty</span><img class="visible-xs" alt="user icon" src="/working-build/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
           <button type="button" class="btn signin-btn dropdown-toggle" data-toggle="dropdown">
             <span class="caret"></span>
             <span class="sr-only">Dropdown</span>
@@ -143,7 +143,7 @@
         The term “authentic language” means that the speakers are engaged in a natural conversation, listening attentively, and responding with interest. In other words, speaking partner mentors should not try to slow down excessively to accommodate the student, nor should they modify their speech to simplify their English. However, speaking partner mentors should be aware of their speech and avoid speaking too rapidly, using excessive slang, or using unnecessary ambiguity (see van Lier, 1996). Using commonly used phrases and words is helpful for the students. Keep in mind that the more naturally you speak, the more authentic your language will be—which, in turn, will be of greater benefit to the student.
       </div>
 
-      <div id="video-info-block">
+      <div id="video-info-block2">
         <img alt="play-button" class="play-button img-responsive" src="/working-build/img/speaking-partners-main/speakingpartner_playbutton.png">
         <p class="note green">Watch the video below to learn more about the role of a speaking partner learner (L version student).</p>
       </div>
@@ -170,7 +170,7 @@
         </ul>
       </div>
 
-      <div id="video-info-block">
+      <div id="video-info-block3">
         <img alt="play-button" class="play-button img-responsive" src="/working-build/img/speaking-partners-main/speakingpartner_playbutton.png">
         <p class="note green">Watch the video below to learn more about authentic language and interaction.</p>
       </div>
@@ -193,7 +193,7 @@
 
         <p>As you work with a student, adjust your correction methods until you find a method that works well for both you and the student; always communicate this method with the student so that he or she will know what to expect.</p>
       </div>  
-      <div id="video-info-block">
+      <div id="video-info-block4">
         <img alt="play-button" class="play-button img-responsive" src="/working-build/img/speaking-partners-main/speakingpartner_playbutton.png">
         <p class="note green">Watch the video below to learn more about the use of synonyms.</p>
       </div>
@@ -224,7 +224,7 @@
           <li>During specific times that you and the student have agreed on for this purpose.</li>
         </ul>
       </div>
-      <div id="video-info-block">
+      <div id="video-info-block5">
         <img alt="play-button" class="play-button img-responsive" src="/working-build/img/speaking-partners-main/speakingpartner_playbutton.png">
         <p class="note green">Watch the video below to learn more about error correction.</p>
       </div>
@@ -234,7 +234,7 @@
       </div>
 
       <div class="pf-section">When you meet for the first time with the Pathway student, you should begin a brief discussion on how you will give feedback. For example, you might explain that you will write down their mistakes while you are talking (so as not to interrupt the flow of the conversation) and that you will discuss some of these errors at the end of each meeting.</div>
-      <div id="video-info-block">
+      <div id="video-info-block6">
         <img alt="play-button" class="play-button img-responsive" src="/working-build/img/speaking-partners-main/speakingpartner_playbutton.png">
         <p class="note green">Watch the video below to learn more about when to give feedback.</p>
       </div>
@@ -253,7 +253,7 @@
         <p>If any serious problems do occur, or if for some reason the relationship is not appropriate, please contact us so we can guide you as to the procedure you should follow.</p>
       </div>
 
-      <div id="video-info-block">
+      <div id="video-info-block7">
         <img alt="play-button" class="play-button img-responsive" src="/working-build/img/speaking-partners-main/speakingpartner_playbutton.png">
         <p class="note green">Watch the video below to learn more about appropriate relationships.</p>
       </div>
@@ -307,16 +307,16 @@
     <div class="footer-links navbar">
       <ul class="nav navbar-nav">
         <li class="social-container"> 
-          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/facebook.png" width="27" height="27"></a><a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="/working-build/img/social-icons/pinterest.png" width="27" height="27"></a><br class="hidden-xs"> <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/twitter.png" width="27" height="27"></a> <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="/working-build/img/social-icons/instagram.png" width="27" height="27"></a>
+          <a class="social-icon" alt="Pathway on Facebook" href="https://www.facebook.com/BYUIdahoPathway"><img alt="facebook icon" src="/working-build/img/social-icons/facebook.png" width="27" height="27"></a><a class="social-icon" alt="Pathway on Pinterest" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img alt="pinterest icon" src="/working-build/img/social-icons/pinterest.png" width="27" height="27"></a><br class="hidden-xs"><a class="social-icon" alt="Pathway on Twitter" href="https://twitter.com/BYUIdahoPathway"><img alt="Twitter icon" src="/working-build/img/social-icons/twitter.png" width="27" height="27"></a><a class="social-icon" alt="Pathway on Instagram" href="http://instagram.com/Pathway_BYUIdaho"><img alt="Instagram icon" src="/working-build/img/social-icons/instagram.png" width="27" height="27"></a>
         </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
         <li class="footer-link hidden-xs"> <a href="/working-build/pages/about-us.html">About Us</a> </li>
-        <li class="footer-link hidden-xs"> <a href="/working-build/pages/pathway-faq.html"><img class="faq-bubble" src="/working-build/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li class="footer-link hidden-xs"> <a href="/working-build/pages/pathway-faq.html"><img class="faq-bubble" alt="question-bubble" src="/working-build/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/videos">Media</a>  </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="http://www.ldsphilanthropies.org/byu-idaho/funds/byuidaho-pathway.html">Donate</a> </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_3mwtzS9u0NgVnQV">Visit a Location</a> </li>
       </ul>
-      <a href="http://www.byui.edu" class="byui-logo hidden-xs"></a> </div>
+      <a href="http://www.byui.edu" class="byui-logo hidden-xs"><span class="sr-only">Go to byui.edu</span></a> </div>
   </div>
 </footer>
 <!-- jQuery, Bootstrap, and Misc Scripts -->
