--- a/pages/speaking_partners/what-is-speaking-partners.html
+++ b/pages/speaking_partners/what-is-speaking-partners.html
@@ -37,12 +37,12 @@
   <div class="container">
     <ul class="nav orange-bar">
       <li class="header-column visible-xs pull-left">&nbsp;</li>
-      <li class="header-column pull-left"> <a id="pathway-logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"></a> <a id="pathway-mobile-logo" class="center-block navbar-brand visible-xs" href="index.htm"></a></li>
+      <li class="header-column pull-left"> <a id="pathway-logo" title="pathway logo" class="navbar-brand img-responsive hidden-xs" href="/working-build/"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a> <a id="pathway-mobile-logo" title="pathway mobile logo" class="center-block navbar-brand visible-xs" href="index.htm"><span class="sr-only">Pathway: In Partnership With BYU-Idaho</span></a></li>
       <li class="header-column pull-right"> <a class="header_contact hidden-xs pull-left" href="/working-build/pages/advising-and-support.html">Contact Us <img src="/working-build/img/speechbubble.png" width="13" height="11" alt="speech"></a>
        <form class="navbar-right pull-right ng-pristine ng-valid">
         <!-- Sign-in / User button -->
         <div class="btn-group">
-          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/working-build/"><span class="hidden-xs">Patty Pathway</span><img class="visible-xs" src="/working-build/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
+          <a class="btn signin-btn" style="text-decoration: none;text-transform: none;" href="/working-build/"><span class="hidden-xs">Patty</span><img class="visible-xs" alt="user icon" src="/working-build/img/usernameman.png" style="padding:0 10px; height:20px;"></a>
           <button type="button" class="btn signin-btn dropdown-toggle" data-toggle="dropdown">
             <span class="caret"></span>
             <span class="sr-only">Dropdown</span>
@@ -114,9 +114,8 @@
         </div>
         <br>
         <div class="pf-section">
-
           <p>We’ve all heard that English is the “universal language.” But do you know why? Perhaps it’s because those who know English typically make more money than those who don’t. Or maybe it’s because 1/4 of the world’s population speak the language at a useful level. <br><br>But no matter the reason, one thing is certain &mdash; learning English sets people up for better opportunities educationally, socially, economically, and more. </p>
-          <div class="img-responsive"><img src="/working-build/img/speaking-partners-main/website_speakingpartners_image1.png"></div>
+          <div class="img-responsive"><img alt="skype meeting" src="/working-build/img/speaking-partners-main/website_speakingpartners_image1.png"></div>
         </div>  
         <h3 class="inset">That's where Speaking Partners comes in.</h3>
 
@@ -124,9 +123,9 @@
 
         <h2 class="subsection"><a id="works"></a>How Speaking Partners Works</h2>
 
-        <div class="img-responsive"><img src="/working-build/img/speaking-partners-main/website_speakingpartners_image2.png"></div>
+        <div class="img-responsive"><img alt="illustration - across the world" src="/working-build/img/speaking-partners-main/website_speakingpartners_image2.png"></div>
         <div class="image-caption-1">Students enrolled in Pathway’s L version (for non-native English speakers) practice and improve their English abilities through conversations with fluent English speakers. </div>
-        <div class="img-responsive"><img src="/working-build/img/speaking-partners-main/website_speakingpartners_image3.png"></div>
+        <div class="img-responsive"><img alt="illustration - speaking partner meeting" src="/working-build/img/speaking-partners-main/website_speakingpartners_image3.png"></div>
         <div class="image-caption-2">Each discussion lasts 30 minutes and occurs once a week for 12 consecutive&nbsp;weeks.</div>
         <br>
         <div id="video-info-block">
@@ -154,7 +153,7 @@
 
         <a href="https://web.byui.edu/SpeakingPartners/Volunteer/" target="_blank"><img class="img-responsive img-space" src="/working-build/img/speaking-partners-main/speakingpartner_signup.png" alt="Click here to sign up as a speaking partner" /></a>
 
-        <div id="video-info-block">
+        <div id="video-info-block2">
           <img alt="play-button" class="play-button img-responsive" src="/working-build/img/speaking-partners-main/speakingpartner_playbutton.png">
           <p class="note green">To watch more videos or learn more about Pathway, visit our <a target="_blank" href="http://www.byui.edu/pathway/videos">Media Page</a>, or click on one of the social media links at the bottom of the page</p>
         </div>
@@ -185,16 +184,16 @@
     <div class="footer-links navbar">
       <ul class="nav navbar-nav">
         <li class="social-container"> 
-          <a class="social-icon" href="https://www.facebook.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/facebook.png" width="27" height="27"></a><a class="social-icon" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img src="/working-build/img/social-icons/pinterest.png" width="27" height="27"></a><br class="hidden-xs"> <a class="social-icon" href="https://twitter.com/BYUIdahoPathway"><img src="/working-build/img/social-icons/twitter.png" width="27" height="27"></a> <a class="social-icon" href="http://instagram.com/Pathway_BYUIdaho"><img src="/working-build/img/social-icons/instagram.png" width="27" height="27"></a>
+          <a class="social-icon" alt="Pathway on Facebook" href="https://www.facebook.com/BYUIdahoPathway"><img alt="facebook icon" src="/working-build/img/social-icons/facebook.png" width="27" height="27"></a><a class="social-icon" alt="Pathway on Pinterest" href="http://www.pinterest.com/byuipop/pathway-online-programs/"><img alt="pinterest icon" src="/working-build/img/social-icons/pinterest.png" width="27" height="27"></a><br class="hidden-xs"><a class="social-icon" alt="Pathway on Twitter" href="https://twitter.com/BYUIdahoPathway"><img alt="Twitter icon" src="/working-build/img/social-icons/twitter.png" width="27" height="27"></a><a class="social-icon" alt="Pathway on Instagram" href="http://instagram.com/Pathway_BYUIdaho"><img alt="Instagram icon" src="/working-build/img/social-icons/instagram.png" width="27" height="27"></a>
         </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/news-index">Newsroom</a> </li>
         <li class="footer-link hidden-xs"> <a href="/working-build/pages/about-us.html">About Us</a> </li>
-        <li class="footer-link hidden-xs"> <a href="/working-build/pages/pathway-faq.html"><img class="faq-bubble" src="/working-build/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
+        <li class="footer-link hidden-xs"> <a href="/working-build/pages/pathway-faq.html"><img class="faq-bubble" alt="question-bubble" src="/working-build/img/faqbubble_small.png" width="16" height="16">FAQ</a> </li>
         <li class="footer-link hidden-xs"> <a href="http://www.byui.edu/pathway/videos">Media</a>  </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="http://www.ldsphilanthropies.org/byu-idaho/funds/byuidaho-pathway.html">Donate</a> </li>
         <li class="footer-link hidden-xs"> <a target="_blank" href="https://byui.az1.qualtrics.com/SE/?SID=SV_3mwtzS9u0NgVnQV">Visit a Location</a> </li>
       </ul>
-      <a href="http://www.byui.edu" class="byui-logo hidden-xs"></a> </div>
+      <a href="http://www.byui.edu" class="byui-logo hidden-xs"><span class="sr-only">Go to byui.edu</span></a> </div>
   </div>
 </footer>
 <!-- jQuery, Bootstrap, and Misc Scripts -->
