--- a/pages/local_leaders/request-a-site.html
+++ b/pages/local_leaders/request-a-site.html
@@ -140,7 +140,7 @@
     <div style="line-height:80%;">
       <p>Pathway Home Office</p>
       <p>(208) 496-1813<br></p>
-      <a href="mailto:pathwaysupport@byui.edu"><span style="font-style:italic;">pathwaysupport@byui.edu.</span></a>
+      <em><a href="mailto:pathwaysupport@byui.edu">pathwaysupport@byui.edu</a></em>
    </div>
 </div>
 <br>
