--- a/pages/local_leaders/request-a-site.html
+++ b/pages/local_leaders/request-a-site.html
@@ -132,15 +132,15 @@
       <li><a target="_blank" href="/working-build/pdfs/local_leaders/Pathway_Site Application_Interactive.pdf"><img src="/working-build/img/local-leaders/application.png" alt="Application"> Download Pathway Site Application</a></li>
       <li><em>This application requires Adobe Reader, which can be downloaded for free at <a target="_blank" href="http://get.adobe.com/reader/">http://get.adobe.com/reader/</a></em>.</li></ul>
       <li>Fill out the form digitally and save a new copy to your computer.</li>
-      <li>Submit the saved application to <a href="mailto:justesenb@byui.edu">justesenb@byui.edu</a> through an email attachment.</li>
+      <li>Submit the saved application to <a href="mailto:pathway@byui.edu">pathway@byui.edu</a> through an email attachment.</li>
     </ol>
   </div>
  <div class="pf-section no-icon" style="margin-top:40px;">
-    <p>For application deadlines, or for questions about the application of the approval process, please contact:</p>
+    <p>For application deadlines or for questions about the application or the approval process, please contact:</p>
     <div style="line-height:80%;">
       <p>Pathway Home Office</p>
       <p>(208) 496-1813<br></p>
-      <em><a href="mailto:pathwaysupport@byui.edu">pathwaysupport@byui.edu</a></em>
+      <em><a href="mailto:pathway@byui.edu">pathway@byui.edu</a></em>
    </div>
 </div>
 <br>
