--- a/pages/local_leaders/request-a-site.html
+++ b/pages/local_leaders/request-a-site.html
@@ -129,7 +129,7 @@
     <ol class="instructions">
       <li>Download the application and save a copy to your computer.</li>
       <ul>
-      <li><a target="_blank" href="/working-build/pdfs/local_leaders/Pathway_Site Application_Interactive.pdf"><img src="/working-build/img/local-leaders/application.png" alt="Application"> Download Pathway Site Application</a></li>
+      <li><a target="_blank" href="/working-build/pdfs/local_leaders/Pathway_Site_Application_Interactive.pdf"><img src="/working-build/img/local-leaders/application.png" alt="Application"> Download Pathway Site Application</a></li>
       <li><em>This application requires Adobe Reader, which can be downloaded for free at <a target="_blank" href="http://get.adobe.com/reader/">http://get.adobe.com/reader/</a></em>.</li></ul>
       <li>Fill out the form digitally and save a new copy to your computer.</li>
       <li>Submit the saved application to <a href="mailto:pathway@byui.edu">pathway@byui.edu</a> through an email attachment.</li>
