--- a/pages/local_leaders/request-a-site.html
+++ b/pages/local_leaders/request-a-site.html
@@ -136,10 +136,10 @@
     </ol>
   </div>
  <div class="pf-section no-icon" style="margin-top:40px;">
-    <p>For application deadlines or for questions about the application or the approval process, please contact:</p>
+    <p>For application deadlines, or for questions about the application or the approval process, please contact:</p>
     <div style="line-height:80%;">
       <p>Pathway Home Office</p>
-      <p>(208) 496-1813<br></p>
+      <p>(208) 496-1818<br></p>
       <em><a href="mailto:pathway@byui.edu">pathway@byui.edu</a></em>
    </div>
 </div>
