--- a/pages/what_is_pathway/s_version/cost.html
+++ b/pages/what_is_pathway/s_version/cost.html
@@ -122,7 +122,7 @@
 					<h2 id="Cost" class="subheading">Cost</h2>
 				</div>
 				<div class="main-content">
-					<p>Pathway’s low tuition rate brings a college education within financial reach of many who thought they could not afford college.</p>
+					<p>Pathway’s low tuition rate brings a college education within financial reach of many who thought they could not afford college*.</p>
 					<br>
 					<a href="cost_calc_tuition.html"><img src="/working-build/img/cost/button_tuition.png" alt="Click here to calculate tuition" class="img-responsive" width="100%"></a>
 					<br>
@@ -134,8 +134,7 @@
 					<p>Pathway students who choose to continue their education on campus after Pathway will pay regular on-campus tuition.</p>
 					<h3 id="FinancialAid" class="p-heading red">Financial Aid</h3>
 					<p>Financial aid is not available for Pathway students. However, U.S. students who have a high school diploma or GED may apply for federal financial aid after they complete Pathway and if they are accepted into a degree-seeking program.</p>
-					<h3 id="LocalTax" class="p-heading red">Local Taxes</h3>
-					<p>As a result of your Pathway participation, taxes or other payments may be owed to your local government. It is your responsibility to understand those laws and comply.</p>
+					<small><em>*In some countries outside of the United States, taxes or other payments may be owed to local governments. It is an individual’s responsibility to understand those laws and comply. Questions may be directed to <a href="/working-build/pages/advising-and-support.html">Pathway Support</a>.</em></small>
 				</div>
 			</div>
 			<a href="/working-build/pages/what_is_pathway/l_version/admission.html" class="previous red"><< Admission Requirements</a>
