--- a/pages/what_is_pathway/l_version/cost.html
+++ b/pages/what_is_pathway/l_version/cost.html
@@ -121,7 +121,7 @@
 					<h2 id="Cost" class="subheading">Cost</h2>
 				</div>
 				<div class="main-content">
-					<p>Pathway’s low tuition rate brings a college education within financial reach of many who thought they could not afford college*.</p>
+					<p>Pathway’s low tuition rate brings a college education within financial reach of many who thought they could not afford college.*</p>
 					<br>
 					<a href="/working-build/pages/what_is_pathway/l_version/cost_calc_tuition.html"><img src="/working-build/img/cost/button_tuition_blue.png" alt="Click here to calculate tuition" class="img-responsive" width="100%"></a>
 					<br>
@@ -134,7 +134,7 @@
 					<p>Pathway students who choose to continue their education on campus after Pathway will pay regular on-campus tuition.</p>
 					<h3 id="FinancialAid" class="p-heading turquoise">Financial Aid</h3>
 					<p>Financial aid is not available for Pathway students. However, U.S. students who have a high school diploma or GED may apply for federal financial aid after they complete Pathway and if they are accepted into a degree-seeking program.</p>
-					<small><em>*In some countries outside of the United States, taxes or other payments may be owed to local governments. It is an individual’s responsibility to understand those laws and comply. Questions may be directed to <a href="/working-build/pages/advising-and-support.html">Pathway Support</a>.</em></small>
+					<p><br><small><em>*In some countries outside of the United States, taxes or other payments may be owed to local governments. It is an individual’s responsibility to understand those laws and comply. Questions may be directed to <a href="/working-build/pages/advising-and-support.html">Pathway Support</a>.</em></small></p>
 				</div>
 			</div>
 			<a href="/working-build/pages/what_is_pathway/l_version/admission.html" class="previous turquoise"><< Admission Requirements</a>
